# Test

./: Makefile  README.md
task/: Makefile  Node.cpp  Node.h  main.cpp  stlheaders.h  task.cpp  task.h
tests/: CMakeLists.txt  Makefile  test.cpp
